add more solutions