@@ -3,16 +3,34 @@ package challenges;
 import domain.Car;
 import domain.Student;
 
+import java.io.StringReader;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.Comparator;
+
+import static java.util.stream.Nodes.collect;
+
 
 public class CarOps {
 
-    public static List<Car> filterCarsByMakeAndModel(List<Car> cars, String make, String model) {
+//40
+    public static List<String> filterCarsByMakeAndModel(List<Car> cars) {
         return cars.stream()
-                .filter(car -> (car.getMake() + car.getModel()).equalsIgnoreCase(make + model))
-                .toList();
+                .map(car -> car.getMake() + " " +  car.getModel())
+                .collect(Collectors.toList());
+    }
+//41
+    public static Optional<Car> findFirstCar(List<Car> cars){
+        return cars.stream().findFirst();
     }
 
-    public static List<Car> filterCarsByMakeAndModel
+    //42
+    public static Optional<Car> findAnyCar(List<Car> cars){
+        return cars.stream().findAny();
+    }
+
+    //44
+
 
 }
